# sci-comp

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt
apps/example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/leq/: leq.h  leq.hpp
src/utils/: ProtoPaths.h.in
test/: CMakeLists.txt  test_helper.h  test_leq.cpp
